pkl-core/src/test/files/LanguageSnippetTests/input/errors/const/constAnnotation3.pkl
import "pkl:reflect"

class Ann extends Annotation {
  foo: Int
}

@Ann { foo = module }
class Foo {}

ann = reflect.Class(Foo).annotations[0]
